# eng-bench

./: .gitignore  CLAUDE.md  PROTOCOL.md  README.md  claude.md  context.md  other_potential_content.md  pyproject.toml
analysis/: PUBLICATION.md  README.md  REPORTING_PLAN_V3.md  REPORTING_PLAN_V4.md  blind_review.py  eligibility.py  gate_eligibility.py  harvest.py  integrity.py  models.py  publication.py  publication_models.py  schedules.py  verify_gate_disclosure.py
articles/: README.md  article1_final.md  article2_final.md  article3_capstone.md  article3_capstone_draft.md  article4_triso.md  hn_faq.md  rccs_calculator.html  reviewer_brief_francisco.md
docs/: HISTORY.md  PROTOCOL_v4.md  VPS_FOLLOWUP.md
experiment/: CLAUDE.md  TASK.md
files/: CLAUDE.md  SETUP_benchmarks.md  reactor_loop_spec.md
httr/: AUDIT.md  SCORECARD.md
measurements/: README.md  held_out.jsonl
operations/: V4_CORE_RETENTION_RECORD.md  V4_FINALIZATION_RUNBOOK.md  V4_OPERATOR_ENVIRONMENT_INCIDENT.md  V4_REVIEWER_PLAN.md  V4_SANDBOX_SECURITY_RECORD.md  V4_SOURCE_PAGE_CITATION_RECORD.md  V4_TRANSITION_RUNBOOK.md  pyproject.toml  v4_finalization.py  v4_stage_archive.py
operations/tests/: test_v4_finalization_end_to_end.py  test_v4_stage_archive_end_to_end.py
protocol/: ARTIFACT_REVIEW.md  FREEZE_RECORD.md  NSTF_CURVE_PROVENANCE.md  PROMPT.md  TRISO_CORRECTIONS.md  VERSION  assemble_frozen_packs.sh  debian_packages_v4.tsv  environment.json  evaluation_ledger.json  evaluator_manifest.sha256  frozen_manifest.sha256  matrix.tsv  preflight_v3.sha256  preflight_v4.sha256  validate_task_packs.sh
repro/: AUDIT.md  GOAL.txt  LICENSE  README.md  run.sh
(+1165 files in other folders)
