[project]
name = "eng-bench-evaluator"
version = "0.1.0"
description = "Deterministic evaluator for the eng-bench engineering experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5,<3",
]

[project.scripts]
eng-bench = "eng_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eng_bench"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

