[project]
name = "nstf-bench"
version = "0.1.0"
description = "NSTF-Bench: agentic engineering analysis benchmark with a deterministic evaluator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5,<3",
]

[project.scripts]
nstf-bench = "nstf_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nstf_bench"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

