[project]
name = "eng-bench-v4-operations"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.12,<3",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = [".."]
testpaths = ["tests"]
